linuxmuster-prepare (0.5.3-0ubuntu0) lmn7-testing; urgency=low

  * fixed help.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 27 Apr 2018 14:57:08 +0200

linuxmuster-prepare (0.5.2-0ubuntu0) lmn7-testing; urgency=low

  * changed hostname setting to hostnamectl.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 20 Apr 2018 11:34:53 +0200

linuxmuster-prepare (0.5.1-0ubuntu0) lmn7-testing; urgency=low

  * merging prepare.ini with setup.ini.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 18 Apr 2018 15:02:50 +0200

linuxmuster-prepare (0.5.0-0ubuntu0) lmn7-testing; urgency=low

  * moved prepare.ini to /var/lib/linuxmuster.
  * removed the reuse of saved prepare.ini values.
  * implemented --default and --do-it-like-babo options.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 18 Apr 2018 10:02:47 +0200

linuxmuster-prepare (0.4.4-0ubuntu0) lmn7-testing; urgency=low

  * fixed netplan configuration.
  * added force option.
  * fixed options parser.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 04 Apr 2018 20:05:13 +0200

linuxmuster-prepare (0.4.3-0ubuntu0) lmn7-testing; urgency=low

  * initial mode hostname fix.
  * added bionic support.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 24 Mar 2018 13:54:40 +0100

linuxmuster-prepare (0.4.2-0ubuntu0) lmn7-testing; urgency=low

  * added linuxmuster-nginx-proxy to docker packages.
  * added -c|--createcert option to create self signed server certificate for
    standalone docker appliances.
  * create /etc/hostname before ssh keys.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 12 Mar 2018 20:26:19 +0100

linuxmuster-prepare (0.4.1-0ubuntu0) lmn7-testing; urgency=low

  * added quota support for server profile.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 25 Feb 2018 14:11:47 +0100

linuxmuster-prepare (0.4.0-0ubuntu0) lmn7-testing; urgency=low

  * added opsi support.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 13 Feb 2018 16:54:15 +0100
